<resources>
    <string name="app_name">Exchange</string>
    <string name="amount_text">Amount</string>
    <string name="currency_from_text">From currency</string>
    <string name="currency_to_text">To currency</string>
    <string name="dollar_text">Dollar</string>
    <string name="euro_text">Euro</string>
    <string name="pound_text">Pound</string>
    <string name="button_text">EXCHANGE</string>
    <string name="result_currency">%1$f%2$s = %3$f%4$s</string>
</resources>